# fp-homework

./: .gitignore  .stylish-haskell  README.md  stack.yaml
hw0/: LICENSE  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1/src/: Block1Task1.hs  Block1Task2.hs  Block1Task3.hs  Block2Task1.hs  Block2Task2.hs  Block3Task1.hs  Block3Task2.hs  Block4Task1.hs  Block4Task2.hs  Block4Task3.hs  Block5Task1.hs  Block6Task1And2.hs
hw1/test/: Block1Task1Spec.hs  Block1Task2Spec.hs  Block1Task3Spec.hs  Block2Task2Spec.hs  Block3Task1Spec.hs  Block3Task2Spec.hs  Block4Task1Spec.hs  Block5Task1Spec.hs  Block6Spec.hs  Spec.hs
hw2/: README.md  hw2.cabal
hw3/: README.md  hw3.cabal
hw3/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw3/test/: Spec.hs  Task1Test.hs  Task2Test.hs
hw4/: LICENSE  README.md  hw4.cabal
